--- a/index.html
+++ b/index.html
@@ -1,132 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stickerz</title>
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="shortcut icon" href="img/baby-yoda.svg" type="image/x-icon">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Stickerz</title>
+  <link rel="shortcut icon" href="img/baby-yoda.svg" type="image/x-icon">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="https://bootswatch.com/5/vapor/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="css/index.css">
 </head>
+
 <body>
-    <header id="home" class="header">
-        <nav class="header-nav">
-          <div class="container">
-            <div class="header-nav__logo">Stickerz</div>
-            <label class="burger-icon" for="burger-checkbox">☰</label>
-            <input type="checkbox" id="burger-checkbox">
-            <div class="header-nav__menu">
-              <a href="#home" class="header-nav__menu-item">Home</a>
-              <a href="#products" class="header-nav__menu-item">Products</a>
-              <a href="#contacts" class="header-nav__menu-item">Contacts</a>
-              <a href="cart.html" class="header-nav__menu-item">
-                Cart</a>
-            </div>
+  <header id="home" class="header">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="#">Stickerz</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#top-navbar"
+          aria-controls="top-navbar" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="top-navbar">
+          <div class="navbar-nav">
+            <a href="#home" class="nav-link active" aria-current="page">Home</a>
+            <a href="#products" class="nav-link">Products</a>
+            <a href="#contacts" class="nav-link">Contacts</a>
+            <a href="cart.html" class="nav-link">
+              Cart</a>
           </div>
-        </nav>
-        <div class="header-banner">
-          <h1 class="header-banner__h1">Stickerz</h1>
-          <button class="header-banner__button button">Shop now</button>
         </div>
-      </header>
-      <main>
-        <section class="main-products container">
-          <h2 id="products" class="main-products__h2">Products</h2>
-          <div class="main-products__list">
-            <article class="product-card">
-              <img
-                class="product-card__image"
-                src="img/baby-yoda.svg"
-                alt="Baby Yoda"
-              />
-              <h3 class="product-card__h3">Baby Yoda</h3>
-              <p class="product-card__description">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro
-                fuga autem possimus eveniet facere, non minus magnam obcaecati,
-                tenetur recusandae, corporis itaque suscipit. Vero illo nulla
-                asperiores laudantium tempore porro!
-              </p>
-              <div class="product-card__buttons">
-                <button class="product-card__buttons-info button button-card">
-                  Info
-                </button>
-                <button class="product-card__buttons-buy button button-card">
-                  Buy
-                </button>
-              </div>
-            </article>
-            <article class="product-card">
-              <img
-                class="product-card__image"
-                src="img/banana.svg"
-                alt="Banana"
-              />
-              <h3 class="product-card__h3">Banana</h3>
-              <p class="product-card__description">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro
-                fuga autem possimus eveniet facere, non minus magnam obcaecati,
-                tenetur recusandae, corporis itaque suscipit. Vero illo nulla
-                asperiores laudantium tempore porro!
-              </p>
-              <div class="product-card__buttons">
-                <button class="product-card__buttons-info button button-card">
-                  Info
-                </button>
-                <button class="product-card__buttons-buy button button-card">
-                  Buy
-                </button>
-              </div>
-            </article>
-            <article class="product-card">
-              <img class="product-card__image" src="img/girl.svg" alt="Girl" />
-              <h3 class="product-card__h3">Girl</h3>
-              <p class="product-card__description">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro
-                fuga autem possimus eveniet facere, non minus magnam obcaecati,
-                tenetur recusandae, corporis itaque suscipit. Vero illo nulla
-                asperiores laudantium tempore porro!
-              </p>
-              <div class="product-card__buttons">
-                <button class="product-card__buttons-info button button-card">
-                  Info
-                </button>
-                <button class="product-card__buttons-buy button button-card">
-                  Buy
-                </button>
-              </div>
-            </article>
-            <article class="product-card">
-              <img
-                class="product-card__image"
-                src="img/viking.svg"
-                alt="Viking"
-              />
-              <h3 class="product-card__h3">Viking</h3>
-              <p class="product-card__description">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro
-                fuga autem possimus eveniet facere, non minus magnam obcaecati,
-                tenetur recusandae, corporis itaque suscipit. Vero illo nulla
-                asperiores laudantium tempore porro!
-              </p>
-              <div class="product-card__buttons">
-                <button class="product-card__buttons-info button button-card">
-                  Info
-                </button>
-                <button class="product-card__buttons-buy button button-card">
-                  Buy
-                </button>
-              </div>
-            </article>
+      </div>
+    </nav>
+    <div id="carousel-products" class="carousel slide container" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carousel-products" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carousel-products" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carousel-products" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carousel-products" data-bs-slide-to="3" aria-label="Slide 4"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/baby-yoda.svg" class="d-block w-50 mx-auto" alt="Baby Yoda">
+        </div>
+        <div class="carousel-item">
+          <img src="img/banana.svg" class="d-block w-50 mx-auto" alt="Banana">
+        </div>
+        <div class="carousel-item">
+          <img src="img/girl.svg" class="d-block w-50 mx-auto" alt="Girl">
+        </div>
+        <div class="carousel-item">
+          <img src="img/viking.svg" class="d-block w-50 mx-auto" alt="Viking">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carousel-products" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carousel-products" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </header>
+  <main>
+    <section class="main-products container">
+      <h2 id="products" class="main-products__h2">Products</h2>
+      <div class="main-products__list row">
+        <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
+          <img src="img/baby-yoda.svg" class="card-img-top" alt="Baby Yoda">
+          <div class="card-body">
+            <h5 class="card-title">Baby Yoda</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#product-info-modal">Info</a>
+            <a href="#" class="btn btn-primary">Buy</a>
           </div>
-        </section>
-      </main>
-      <footer id="contacts" class="footer container">
-        <h2>Contact Us</h2>
-        <form action="" class="footer__contacts">
-          <input type="text" name="name" placeholder="name" />
-          <input type="email" name="email" placeholder="email" />
-          <button class="button button-card">Submit</button>
-        </form>
-      </footer>
+        </article>
+        <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
+          <img src="img/banana.svg" class="card-img-top" alt="Banana">
+          <div class="card-body">
+            <h5 class="card-title">Banana</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-info">Info</a>
+            <a href="#" class="btn btn-primary">Buy</a>
+          </div>
+        </article>
+        <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
+          <img src="img/girl.svg" class="card-img-top" alt="Girl">
+          <div class="card-body">
+            <h5 class="card-title">Girl</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-info">Info</a>
+            <a href="#" class="btn btn-primary">Buy</a>
+          </div>
+        </article>
+        <article class="card col-12 col-sm-6 col-md-4 col-lg-3">
+          <img src="img/viking.svg" class="card-img-top" alt="Viking">
+          <div class="card-body">
+            <h5 class="card-title">Viking</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-info">Info</a>
+            <a href="#" class="btn btn-primary">Buy</a>
+          </div>
+        </article>        
+      </div>
+    </section>
+  </main>
+  <footer id="contacts" class="footer container">
+    <h2>Contact Us</h2>
+    <form action="" class="footer__contacts">
+      <input type="text" name="name" placeholder="name" />
+      <input type="email" name="email" placeholder="email" />
+      <button class="button button-card">Submit</button>
+    </form>
+  </footer>
+
+  <!-- Modal Product Info -->
+  <div class="modal fade" id="product-info-modal" tabindex="-1" aria-labelledby="product-info-modalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="product-info-modalLabel">Baby Yoda</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <img src="img/baby-yoda.svg" class="card-img-top" alt="Baby Yoda">
+          <h5 class="card-title">Baby Yoda</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
